# stk-automation-agent-toolkit

./: .gitignore  INSTALL.en.md  INSTALL.zh-CN.md  README.md
skills/stk-automation/references/: portable-install.md  stk-com-data-providers.md
skills/stk-automation/scripts/stkMCP/: README.md
skills/stk-automation/scripts/stkMCP/stk_mcp/: __init__.py  automation.py  server.py
stk-automation/: SKILL.md
stk-automation/agents/: openai.yaml
stk-automation/scripts/: install_stk_mcp.ps1
stk-automation/scripts/stkMCP/: pyproject.toml
stkMCP/: README.md
stkMCP/examples/: sample_uav_link_config.json
