[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stk-mcp"
version = "0.1.0"
description = "MCP server for STK COM automation, scenario creation, simulation, and data export."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
stk-mcp = "stk_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stk_mcp*"]
